[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/game/player/player.gd" type="Script" id=1]
[ext_resource path="res://textures/player_placeholder.png" type="Texture" id=2]
[ext_resource path="res://textures/light.png" type="Texture" id=3]
[ext_resource path="res://src/game/hud/debug_showhide.gd" type="Script" id=4]
[ext_resource path="res://src/game/player/camera.gd" type="Script" id=5]
[ext_resource path="res://src/game/player/death.gd" type="Script" id=6]
[ext_resource path="res://textures/pixil-frame-0 (2).png" type="Texture" id=7]
[ext_resource path="res://scenes/player.gdshader" type="Shader" id=8]
[ext_resource path="res://resources/texture1.png" type="Texture" id=9]
[ext_resource path="res://resources/hologram_lines.png" type="Texture" id=10]

[sub_resource type="CircleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 8 )
shader_param/noise_speed = 2.0
shader_param/borderColor = Color( 1, 1, 1, 1 )
shader_param/texture2 = ExtResource( 9 )
shader_param/noiseTexture = ExtResource( 10 )

[sub_resource type="CircleShape2D" id=2]
radius = 15.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="ActivateArtifact" type="Node2D" parent="."]

[node name="effect" type="Sprite" parent="ActivateArtifact"]
position = Vector2( 1, 5 )
scale = Vector2( 3, 3 )
texture = ExtResource( 7 )

[node name="ArtifactArea" type="Area2D" parent="ActivateArtifact"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivateArtifact/ArtifactArea"]
scale = Vector2( 5, 5 )
shape = SubResource( 3 )
disabled = true

[node name="PlayerModel" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 4.76837e-07, 4.76837e-07 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FOV" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 3 )
texture_scale = 1.5
mode = 2
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_filter = 5
script = ExtResource( 4 )

[node name="Camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.6, 0.6 )
smoothing_enabled = true
smoothing_speed = 12.0
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="Camera"]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 5 )
margin_left = -515.0
margin_top = -297.0
margin_right = 506.0
margin_bottom = 305.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathBox" type="Area2D" parent="."]
monitorable = false
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBox"]
shape = SubResource( 2 )

[node name="temp_artifact" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -23 )
texture = ExtResource( 7 )

[connection signal="body_entered" from="ActivateArtifact/ArtifactArea" to="." method="_on_ArtifactArea_body_entered"]
[connection signal="body_exited" from="ActivateArtifact/ArtifactArea" to="." method="_on_ArtifactArea_body_exited"]
[connection signal="body_entered" from="DeathBox" to="DeathBox" method="_on_DeathZone_body_entered"]
